[tool.poetry]
name = "interest_rate"
version = "0.1.0"
description = ""
authors = ["Lukas Kellerstein <lukas.kellerstein@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
quantlib = "^1.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
